additional formatting for revenue card to avoid overflow

--- a/app/assets/stylesheets/merchants.scss
+++ b/app/assets/stylesheets/merchants.scss
@@ -27,7 +27,7 @@ $burgundy: #4F3640;
   // box-shadow: 3px 2px 0 $navy;
   color: $navy;
   text-align: center;
-  padding: 2rem;
+  padding: 2rem 0;
   margin: 1rem auto;
   min-width: 15.5rem;
 }
